$Id$


MIDIboxSEQ V4L.073
~~~~~~~~~~~~~~~~~~

   o bugfix for "single_usb" option

   o Martijn adapted the MIDI Remote Keyboard functions for MBSEQV4L
     The key assignments are documented in doc/mbseq_lite_remote_functions.pdf


MIDIboxSEQ V4L.072
~~~~~~~~~~~~~~~~~~

   o support for the "single_usb" option, which can be enabled with the
     bootloader update application V1.012 ("set usb_single 1")

     Use this option if you are working with a Windows PC which can't handle
     the 4 USB ports correctly (e.g. stucking MIDI, Filebrowser operations are failing, etc.)


MIDIboxSEQ V4L.071
~~~~~~~~~~~~~~~~~~

   o enabled 4 USB-MIDI ports


MIDIboxSEQ V4L.069
~~~~~~~~~~~~~~~~~~

   o USB MSD driver: changed endpoint to avoid conflict with MIDI driver.
     Note that it's still not possible to use MSD and MIDI in parallel,
     but Windows and MacOS should accept the connection (again).

   o corrected tap tempo function


MIDIboxSEQ V4L.068
~~~~~~~~~~~~~~~~~~

   o support for GM5 driver under Windows.
     MacOS and Linux users: just install this update, no additional changes required.
     Windows users:
     - upload the application with MIOS Studio
     - close MIOS Studio
     - install the GM5 driver which can be downloaded from http://www.ucapps.de/mios32_download.html
     - start MIOS Studio -> 4 "GM5" USB ports should be visible


MIDIboxSEQ V4L.067
~~~~~~~~~~~~~~~~~~

   o USB device settings have been changed.
     IMPORTANT: please install MIOS32 Bootloader V1.010 before uploading
     the application! Otherwise code upload via USB won't work anymore!
     (Backup: upload via MIDI IN1/OUT1)

   o support for MIOS Filebrowser, which will be part of MIOS Studio 2.4


MIDIboxSEQ V4L.064
~~~~~~~~~~~~~~~~~~

   o corrected tap tempo function


MIDIboxSEQ V4L.059
~~~~~~~~~~~~~~~~~~

   o fixed stack overflow which happened when incoming OSC messages were forwarded
     to OSC in Live mode (they are now automatically filtered to avoid feedback loops)

