@@ -56,6 +56,7 @@
 
 // optional performance measuring
 // see documentation under http://www.midibox.org/mios32/manual/group___f_r_e_e_r_t_o_s___u_t_i_l_s.html
+#define configUSE_TRACE_FACILITY                0
 #define configGENERATE_RUN_TIME_STATS           0
 #define portCONFIGURE_TIMER_FOR_RUN_TIME_STATS  FREERTOS_UTILS_PerfCounterInit
 #define portGET_RUN_TIME_COUNTER_VALUE          FREERTOS_UTILS_PerfCounterGet
